--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@ and are not intended to imply an endorsement by the organization.
 <li><a href="https://twitter.com/whereandy">Andrew Cheung, Signal Sciences</a></li> <!--from Github user whereandy -->
 <li>Andrew Dunham, Stripe <!-- from GitHub user andrew-d -->
 <li>Andrew Losowsky, <a href="https://coralproject.net">The Coral Project</a> <!--from github user losowsky -->
-<li>Anthony Martinez, Twitter
 <li><a href="https://andrewmichaud.com">Andrew Michaud</a>, Quantcast <!-- from GitHub user andrewmichaud -->
 <li>Anil Dash, Fog Creek Software
 <li>Annie Tuan, Mobile Software Engineer
@@ -211,7 +210,6 @@ and are not intended to imply an endorsement by the organization.
 <li><a href="https://twitter.com/SoylentBleen">Henry Chen</a>, <a href="https://hackbrightacademy.com/">Hackbright Academy</a>
 <li><a href="http://hollyallen.info/">Holly Allen</a> <!-- from GitHub user hollyallen -->
 <li><a href="https://twitter.com/ingridavendano">Ingrid Avenda&ntilde;o, Uber</a>
-<li><a href="http://ivanmontilla.com">Ivan Montilla, Miralles IT</a>
 <li>James Gates</li>
 <li><a href="https://twitter.com/janardanyri">Janardan Yri</a>
 <li>Jane Ruffino
@@ -305,7 +303,7 @@ and are not intended to imply an endorsement by the organization.
 <li>Nate Parsons, Planet Labs, Inc.
 <li>Nathan Sorenson, SparkFund
 <li>Nathaniel Wolf, Pandora <!-- from GitHub user nathanielwolf -->
-<li>Nick Sull, Cloudflare
+<li>Nick Sullivan, Cloudflare
 <li>Nikko Patten-Weinstein, SparkFund
 <li><a href="https://noahberman.org">Noah Berman</a> <!-- from Github user bermannoah -->
 <li><a href="https://twitter.com/nthall">Noah Hall</a>
@@ -364,7 +362,7 @@ and are not intended to imply an endorsement by the organization.
 <li>William Wnekowicz, Developer in Residence, KPCB
 <li><a href="https://github.com/wgreenberg">Will Greenberg, Endless Computers</a>
 <li><a href="https://diracdeltas.github.io">Yan Zhu, Security Engineer</a>
-
+  <li><a href="http://tide-pool.ca">Thor Kell</a>, Spotify
 <!-- End of signatures. -->
 </ul>
 
